--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -12,49 +12,27 @@ phases:
     commands:
       - echo "[+] Running pre-build tasks"
       - ECR_URI="${ACCOUNT_ID}.dkr.ecr.${AWS_REGION}.amazonaws.com"
-      - FUNCTION_NAMES="${SYSTEM_NAME}_${ENV}_CommandFunction ${SYSTEM_NAME}_${ENV}_ProcessSQSFunction ${SYSTEM_NAME}_${ENV}_ProcessStreamFunction ${SYSTEM_NAME}_${ENV}_AuthFunction ${SYSTEM_NAME}_${ENV}_QueryFunction ${SYSTEM_NAME}_${ENV}_WaitSQSConsumer"
-      - FUNCTION_SRC_DIRS="src/command src/process_sqs src/process_stream src/authorizer src/query src/process_wait"
-
+      - FUNCTION_NAMES="${SYSTEM_NAME}_${ENV}_CommandFunction ${SYSTEM_NAME}_${ENV}_ProcessSQSFunction ${SYSTEM_NAME}_${ENV}_ProcessStreamFunction ${SYSTEM_NAME}_${ENV}_AuthFunction ${SYSTEM_NAME}_${ENV}_QueryFunction ${SYSTEM_NAME}_${ENV}_WaitSQSConsumerFunction"
       - aws --version
       # login to ECR
       - aws ecr get-login-password --region ${AWS_REGION} | docker login --username AWS --password-stdin ${ECR_URI}
 
-      - IMAGE_URIS=""
-      - REPO_NAMES=""
-      - for FUNCTION_NAME in $(echo $FUNCTION_NAMES | sed "s/ / /g"); do
-        IMAGE_URI=$(aws lambda get-function --function-name $FUNCTION_NAME | jq -r '.Code.ImageUri');
-        IMAGE_URIS+="${IMAGE_URI} ";
-
-        REPO_NAME=$(echo ${IMAGE_URI} | cut -d "/" -f 2)/$(echo ${IMAGE_URI} | cut -d "/" -f 3);
-        REPO_NAME=$(echo ${REPO_NAME} | cut -d ":" -f 1);
-        REPO_NAMES+="${REPO_NAME} ";
-        done
-      - echo "[+] Image URIs $IMAGE_URIS"
-      - echo "[+] Repo Names $REPO_NAMES"
       - IMAGE_TAG=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-8)
       - echo $IMAGE_TAG
   build:
     commands:
       - echo "[+] building ...."
-      - i=1
-      - for REPO_NAME in $(echo $REPO_NAMES | sed "s/ / /g"); do
-        docker build -t $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG $(echo $FUNCTION_SRC_DIRS | cut -d " " -f $i);
-        docker tag $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG $ECR_URI/$REPO_NAME:$IMAGE_TAG;
-        i=$((i+1));
-        done
+      - docker build --pull -t $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG .
+      - docker tag $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG $ECR_URI/$REPO_NAME:$IMAGE_TAG
 
   post_build:
     commands:
       - echo "SAM packaging completed on `date`"
-      - i=1
-      - for REPO_NAME in $(echo $REPO_NAMES | sed "s/ / /g"); do
-        docker push $ECR_URI/$REPO_NAME:$IMAGE_TAG;
-        docker push $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG;
-        echo "Pushed $ECR_URI/$REPO_NAME:$IMAGE_TAG";
-        echo "Pushed $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG";
-        aws lambda update-function-code --function-name $(echo $FUNCTION_NAMES | cut -d " " -f $i) --image-uri $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG;
-        i=$((i+1));
+
+      - docker push $ECR_URI/$REPO_NAME:$IMAGE_TAG
+      - docker push $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG
+      - echo "Pushed $ECR_URI/$REPO_NAME:$IMAGE_TAG"
+      - echo "Pushed $ECR_URI/$REPO_NAME:$LATEST_DOCKER_TAG"
+      - for FUNCTION_NAME in $(echo $FUNCTION_NAMES | sed "s/ / /g"); do
+        aws lambda update-function-code --function-name $FUNCTION_NAME --image-uri $ECR_URI/$REPO_NAME:$LATEST_TAG;
         done
-# artifacts:
-#   files:
-#     - image_detail.json
