--- a/test/test_ecr/template.yaml
+++ b/test/test_ecr/template.yaml
@@ -22,13 +22,14 @@ Resources:
     Properties:
       PackageType: Image
       FunctionName: ECRTestFunction
-      # ImageUri: !GetAtt MyRepository.RepositoryUri
-      # ImageUri: abc
-    Metadata:
-      Dockerfile: Dockerfile
-      DockerContext: ecr_test/
-      DockerTag: latest
+      # 465316005105.dkr.ecr.ap-northeast-1.amazonaws.com/mbcssodevsam969f5a6b/processsqsfunctione995b6c6repo:latest
+      # ImageUri: 'public.ecr.aws/cloudone_application_security/lambda-python:3.7.10-9'
 
+      ImageUri: 12.dkr.ecr.ap-northeast-1.amazonaws.com/abc:latest
+    # Metadata:
+    #   Dockerfile: Dockerfile
+    #   DockerContext: ecr_test/
+    #   DockerTag: latest
 # Outputs:
 #   Arn:
 #     Value: !GetAtt MyRepository.Arn
